[package]
name = "braid-db"
version = "0.1.0"
edition = "2021"

[dependencies]
const_format = "0.2.32"
braid-hash = { path = "../braid-hash" }
rocksdb = { version = "0.22.0", optional = true, default-features = false, features = ["snappy"] }
sqlx = { version = "0.7.4", optional = true, features = ["time", "runtime-tokio" ] }
thiserror = "1.0.58"
time = "0.3.36"

[dev-dependencies]
tempdir = "0.3.7"

[features]
rocks = ["rocksdb"]
postgres = ["sqlx/postgres"]
