[package]
name = "braid-hash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.5.1"
rmp-serde = "1.1.2"
serde = "1.0.197"
sqlx = { version = "0.7.4", optional = true, features = ["time", "runtime-tokio" ] }

[features]
postgres = ["sqlx/postgres"]
